--- a/Task-Supplier/src/app/Components/delivery-view/delivery-view.component.html
+++ b/Task-Supplier/src/app/Components/delivery-view/delivery-view.component.html
@@ -1,3 +1,5 @@
+
+<app-navbar></app-navbar>
 <div class="centered-content">
     <div class="delivery-manager-container">
         <div class="sidebar has-background-white">
